--- a/README
+++ b/README
@@ -7,8 +7,85 @@ Use the package manager [npm](https://www.npmjs.com/) to install foobar.
 
 ```bash
 # Install project dependencies
-npm install 
+npm install --save \
+  @angular/animations@5.2.9 \
+  @angular/common@5.2.9 \
+  @angular/compiler@5.2.9 \
+  @angular/compiler-cli@5.2.9 \
+  @angular/core@5.2.9 \
+  @angular/fire@^5.1.1 \
+  @angular/forms@5.2.9 \
+  @angular/http@5.2.9 \
+  @angular/platform-browser@5.2.9 \
+  @angular/platform-browser-dynamic@5.2.9 \
+  @ionic-native/badge@^5.2.0 \
+  @ionic-native/call-number@^4.20.0 \
+  @ionic-native/camera@^4.18.0 \
+  @ionic-native/core@4.5.3 \
+  @ionic-native/device@^4.18.0 \
+  @ionic-native/email-composer@^5.2.0 \
+  @ionic-native/fcm@^4.20.0 \
+  @ionic-native/firebase@^4.20.0 \
+  @ionic-native/geofence@^4.18.0 \
+  @ionic-native/geolocation@^4.18.0 \
+  @ionic-native/in-app-browser@^5.1.0 \
+  @ionic-native/native-geocoder@^5.0.0 \
+  @ionic-native/onesignal@^5.12.0 \
+  @ionic-native/photo-library@^4.20.0 \
+  @ionic-native/splash-screen@4.5.3 \
+  @ionic-native/status-bar@4.5.3 \
+  @ionic/storage@^2.1.3 \
+  @mobiscroll/angular-lite@^4.7.3 \
+  angularfire2@^5.0.2 \
+  animate.css@^3.7.2 \
+  call-number@^1.0.1 \
+  cordova-browser@5.0.4 \
+  cordova-ios@^5.0.0 \
+  cordova-plugin-actionsheet@^2.3.3 \
+  cordova-plugin-add-swift-support@1.7.2 \
+  cordova-plugin-camera@4.1.0 \
+  cordova-plugin-compat@^1.2.0 \
+  cordova-plugin-device@^2.0.3 \
+  cordova-plugin-dialogs@^2.0.2 \
+  cordova-plugin-email-composer@^0.9.2 \
+  cordova-plugin-fcm-with-dependecy-updated@^4.1.1 \
+  cordova-plugin-file@6.0.2 \
+  cordova-plugin-geofence@^0.7.0 \
+  cordova-plugin-geolocation@4.0.2 \
+  cordova-plugin-inappbrowser@^3.0.0 \
+  cordova-plugin-ionic-keyboard@^2.2.0 \
+  cordova-plugin-ionic-webview@^1.2.1 \
+  cordova-plugin-nativegeocoder@^3.1.3 \
+  cordova-plugin-photo-library@2.2.1 \
+  cordova-plugin-splashscreen@^5.0.3 \
+  cordova-plugin-statusbar@^2.4.3 \
+  cordova-plugin-whitelist@1.3.4 \
+  cordova-sqlite-storage@^3.4.1 \
+  cordova-universal-links-plugin@^1.2.1 \
+  epayco-node@0.0.5 \
+  epayco-tokenizer@^1.0.6 \
+  es6-promise-plugin@^4.2.2 \
+  firebase@^5.7.0 \
+  geofire@^4.1.2 \
+  ionic-angular@3.9.2 \
+  ionicons@3.0.0 \
+  js-sha512@^0.8.0 \
+  moment@^2.24.0 \
+  mx.ferreyra.callnumber@0.0.2 \
+  ng-lottie@^0.3.2 \
+  promise-polyfill@^8.1.0 \
+  replace@^1.0.1 \
+  rxjs@^6.0.0 \
+  rxjs-compat@^6.3.3 \
+  sw-toolbox@3.6.0 \
+  uk.co.workingedge.phonegap.plugin.launchnavigator@^5.0.4 \
+  zone.js@0.8.20
 
+# Install development dependencies
+npm install --save-dev \
+  @ionic/app-scripts@^3.2.3 \
+  typescript@~2.6.2 \
+  xcode@^2.0.0
 ```
 
 
